# gg

./: .envrc  .gitignore  Cargo.toml  Makefile  README  requirements-test.txt  requirements.in  requirements.txt
gg/: main.py
gg/actions/: checkout.py  delete.py  land.py  push.py  rebase.py
gg/cli/: gg.py
gg/cli/subcommands/: checkout.py  delete.py  diff.py  fixup.py  land.py  landrebase.py  log.py  new.py  pullrequest.py  push.py  rebase.py  rebaseall.py  renumber.py  review.py  updatebase.py
gg/gateways/git/: __init__.py  branch_checkout.py  branch_create.py  branch_delete.py  branch_delete_remote.py  branch_get.py  branch_info.py  cherry_pick.py  commit_info.py  diff.py  fetch.py  log_graph.py  push.py  rebase.py  reset.py
gg/gateways/github/: __init__.py  merge.py  pr_info.py  pull_request.py  update_pr.py
gg/lib/: branch_name.py  log.py  printable.py
rust/: Cargo.toml  lint.sh
rust/src/: color.rs  config.rs  file.rs  issues.rs  main.rs  pomodoro.rs  pr.rs  status.rs  terminal.rs
rust/src/color/: mod.rs
rust/src/config/: mod.rs
rust/src/db/: mod.rs
rust/src/git/: mod.rs
rust/src/git_rebase/: mod.rs
rust/src/github/: issue.rs  mod.rs  pr.rs
rust/src/pr/: mod.rs
rust/src/status/: mod.rs
rust/src/terminal/: app.rs  branches.rs  mod.rs
src/: main.rs
src/color/: mod.rs
src/config/: mod.rs
src/file/: mod.rs
src/git/: mod.rs
src/git_rebase/: mod.rs
src/github/: issue.rs  mod.rs  pr.rs
src/pomodoro/: mod.rs
src/record/: mod.rs
src/terminal/: branches.rs  mod.rs
tests/: simple_test.py
tests/commands/: test_new.py
(+13 files in other folders)
