[package]
name = "gg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
octocrab = "0.42.1"
futures = "0.3"
tokio = {version = "1.12.0", features = ["full"] }
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1", default-features = false }
termion = "*"
tui = "0.16"
structopt = { version = "0.3", default-features = false }
chrono = "0.4"
open = "*"
crossterm = "0.22"
ansi-escapes = "0.1.0"
async-trait="0.1"
dirs="4"
rusqlite="0.26"
