[package]
name = "gg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
octocrab = "0.9"
futures = "0.3"
tokio = {version = "1.12.0", features = ["full"] }
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", default-features = false }
termion = "*"
structopt = { version = "0.3", default-features = false }